# Chess

./: Dockerfile  README.md  x.sh
.github/workflows/: ci.yml
Backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  manage.py
Backend/Backend/: settings.py  wsgi.py
Backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/users/migrations/: 0001_initial.py
Engine/: CMakeLists.txt  Dockerfile  docker-compose.yml
Engine/include/: ChessMove.hpp  ChessServer.hpp  ChessState.hpp  Engine.hpp  Heuristic.hpp  PositionORM.hpp
Engine/src/: ChessMove.cpp  ChessServer.cpp  ChessState.cpp  Engine.cpp  PositionORM.cpp  main.cpp
Engine/tests/: ChessMoveTest.cpp  ChessStateTest.cpp
include/: ChessState.hpp  Heuristic.hpp
src/: ChessMove.cpp  ChessState.cpp  Engine.cpp
tests/: ChessMoveTest.cpp  ChessStateTest.cpp
